# operations-debs-contenttranslation-apertium-oc-es

./: AUTHORS  Makefile.am  NEWS  README  apertium-oc-es.es-oc.t1x  apertium-oc-es.es-oc.t2x  apertium-oc-es.es-oc.t3x  apertium-oc-es.es.dix  apertium-oc-es.oc-es.t1x  apertium-oc-es.oc-es.t2x  apertium-oc-es.oc-es.t3x  apertium-oc-es.oc.metadix  apertium-oc-es.post-es.dix  apertium-oc-es.post-oc.dix  apertium-oc-es_1.0.6~r60161.orig.tar.gz.delta  apertium-oc-es_1.0.6~r60161.orig.tar.gz.id  autogen.sh  configure.ac  modes.xml
debian/: changelog  control  copyright
